<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:contentPadding="20dp"
    app:cardCornerRadius="10dp"
    android:backgroundTint="#FFFFF0">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:contentDescription="@string/movie_image"
            android:src="@mipmap/ic_launcher"
            android:id="@+id/item_image"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="20sp"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_item_title"
                android:textSize="20sp"
                android:textStyle="bold"
                android:id="@+id/item_title"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:id="@+id/item_description"
                android:text="@string/item_detailed_description"
                android:layout_marginTop="6dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:id="@+id/user_comments"
                android:text="@string/item_detailed_description"
                android:layout_marginTop="6dp"/>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>